--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=trungkillershop
 server.port = 8088
 server.servlet.context-path=/trungkillershop
-
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 #spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/XEPDB1
 #spring.datasource.username=common
 #spring.datasource.password=common123
